Updated to tope level requirements and specific versions

--- a/environment.yml
+++ b/environment.yml
@@ -1,48 +1,15 @@
 name: sonar
 channels:
- - conda-forge
- - pyviz
-
+  - conda-forge
 dependencies:
- - pyviz
- - bokeh
- - cartopy
- - colorcet
- - graphviz
- - python-graphviz
- - dask
- - datashader
- - distributed
- - fastparquet
- - firefox
- - geckodriver
- - pyarrow
- - geoviews
- - holoviews
- - ipython
- - jupyter
- - matplotlib
- - nest-asyncio
- - networkx>=2.0
- - netCDF4
- - numba
- - numpy
- - numpy-stl
- - overpy
- - pandas
- - param
- - phantomjs
- - pillow
- - pscript
- - python-snappy
- - python
- - rasterio
- - requests
- - selenium
- - scikit-image
- - scipy
- - shapely
- - snappy
- - statsmodels
- - streamz
- - xarray
+  - bokeh=2.0.2
+  - dask=2.17.2
+  - datashader=0.10.0
+  - firefox=77.0
+  - geckodriver=0.26.0
+  - holoviews=1.13.2
+  - netcdf4=1.5.3
+  - numpy-stl=2.11.2
+  - overpy=0.4
+  - selenium=3.141.0
+  - xarray=0.15.1
